# tictactoe-hs

./: LICENSE  README.md  haskell-in-english.md  in-english.md  stack.yaml  tictactoe-hs.cabal
.undodir/: %home%deciduously%work%exercises%tictactoe-hs%.gitignore  %home%deciduously%work%exercises%tictactoe-hs%src%Main.hs
src/: Main.hs  TicTacToeLib.hs
