name:                tictactoe-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/deciduously/tictactoe-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Lovy
maintainer:          bendlovy@gmail.com
copyright:           2017, Ben Lovy
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ttt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
  other-modules:       TicTacToeLib

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToeLib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
